Refactors to use Express and modular route handling
Migrates from raw Node.js HTTP server to Express for improved routing, middleware, and maintainability.
Splits routing logic into separate modules for admin and shop features.
Adds HTML views for shop, add product, and 404 errors.
Introduces body parsing for handling form submissions.
Enhances scalability and prepares for future feature expansion.

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/FraDV3/node-first-app#readme",
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0"
   }
 }
