--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "@prettier/plugin-pug": "^3.4.2",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "ejs": "^3.1.10",
+    "express": "^4.16.3",
+    "express-handlebars": "^8.0.3",
+    "pug": "^3.0.3"
   }
 }
